manifest/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  labels:
    app: java-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-webapp
  template:
    metadata:
      labels:
        app: java-webapp
    spec:
      containers:
      - name: petclinic
        image: godfather77701/webapp:v49
        ports:
        - containerPort: 8080
