manifest/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: javawebapp-service
spec:
  selector:
    app: java-webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
